# CrashCrawler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
coredump/: CMakeLists.txt  latencycatch.bpf.c  latencycatch.c  latencycatch.skel.h
crashcrawler/: CMakeLists.txt  crashcrawler.bpf.c  crashcrawler.cpp  hardware.sh
crashcrawler/include/: color.h  crashcrawler.h  path_utils.h
crashcrawler/logo/: 2.txt
crashcrawler/my_dump_test/: 1_parse_elf.c  Makefile
crashtest/: color.h  divideZero.c  makefile  multiThread_SegFault.c  test.py  test.sh  write_read_only_mem
crashtest/crash_stress_test/: process_crash_stress_test.cpp  thread_crash_stress_test.cpp
crashtest/segfault/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  makefile  multiThread_SegFault.c  write_read_only_mem.c
doc/: Crashcrawler_SYSU.pptx  SYSU-160 CrashCrawler开发文档.md  阶段性开发文档.md
src/: exitcatch.bpf.c  exitcatch.c  exitcatch.h  exitcatch.skel.h  hardware.sh  hello.skel.h  vmlinux.h
src/libbpf/usr/include/pkgconfig/: libbpf.pc
src/logo/: 1.txt  2.txt
tmp/: hardware.sh  run.sh  symbol  test  test.c
